# mcp-pikvm

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose-http.yaml  compose.https.yaml  compose.yaml  pyproject.toml
.github/workflows/: ci.yml
deploy/: Caddyfile  Caddyfile.example
docs/: pikvm-core.md
scripts/: configure-pikvm-mcp.sh  container-entrypoint.sh  pikvm-local-mcp  setup-docker-compose.sh
secrets/: mcp_admin_token.txt.example  mcp_config_encryption_key.txt.example  mcp_http_bearer_token.txt.example  pikvm-mcp.env.example  pikvm_control_secret.txt.example  pikvm_password.txt.example
src/pikvm_core/: __init__.py  client.py
src/pikvm_mcp/: __init__.py  admin.py  audit.py  client.py  config.py  runtime_config.py  security.py  server.py  vision.py
tests/: test_admin.py  test_client.py  test_configuration_gate.py  test_core.py  test_http_config.py  test_runtime_config.py  test_security.py  test_vision.py
