[project]
name = "pikvm-local-mcp"
version = "0.1.0"
description = "A safety-first Streamable HTTP MCP server for PiKVM"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27,<1",
  "mcp[cli]>=1.27,<2",
  "uvicorn>=0.30,<1",
]

[project.scripts]
pikvm-local-mcp = "pikvm_mcp.server:main"

[dependency-groups]
dev = ["pytest>=8,<9"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pikvm_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
