[project]
name = "pikvm-local-mcp"
version = "0.9.2"
description = "A safety-first PiKVM MCP server with a reusable PiKVM API core"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27,<1",
  "mcp[cli]>=1.27,<2",
  "Pillow>=10,<12",
  "uvicorn>=0.30,<1",
]

[project.scripts]
pikvm-local-mcp = "pikvm_mcp.server:main"

[dependency-groups]
dev = ["pytest>=8,<9"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pikvm_mcp", "src/pikvm_core"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
